commons/kubernetes/activemq/templates/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: activemq
  namespace: ${namespace}
spec:
  hosts:
    - ${namespace}-activemq.${domain_name}
  gateways:
    - ${namespace}-gateway
    - mesh
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            port:
              number: 8160 # Intentionally kept as 8160 not 8161 
            host: activemq
